add homepage image

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 	</head>
 	<body>
 		<main>
-			<section class="home">
-				<div class="home-img"></div>
+			<section class="home row">
+				<div class="home-img">
+					<img src="./src/images/baby.png" alt="Baby images" />
+				</div>
 				<div class="home-text">
 					<h1>Akan Names</h1>
 					<p>
 						Often in Ghanian culture, children are given Akan names which
 						corresponds to the day of the week which they were born. Akan names
-						are usually the first name of the person. Below is a list of the
-						Akan names matching the 5 days of the week:
+						are usually the first name of the person. Below is a list of Akan
+						names matching the 5 days of the week:
 					</p>
 					<ul class="akan-names"></ul>
-                    <button class="btn">Get an Akan Name</button>
+					<button class="btn">Get an Akan Name</button>
 				</div>
 			</section>
 		</main>
