fix: style -- add missing class for js selector

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<main>
-			<section class="home row">
+			<section class="home row show">
 				<div class="home-img">
 					<img src="./src/images/baby.png" alt="Baby images" />
 				</div>
@@ -22,7 +22,7 @@
 						names matching the 5 days of the week:
 					</p>
 					<ul class="akan-names"></ul>
-					<button class="btn">Get an Akan Name</button>
+					<button class="btn get-akane">Get an Akan Name</button>
 				</div>
 			</section>
 		</main>
