--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<main>
 			<!-- Homepage Section Start -->
-			<section class="home row show">
+			<section class="home row hide">
 				<div class="home-img">
 					<img src="./src/images/baby.png" alt="Baby images" />
 				</div>
@@ -29,16 +29,31 @@
 			<!-- Homepage Section End -->
 
 			<!-- Akan Names Form Start -->
-			<section class="akan hide">
-                <div class="akan-heading">
-                    <h2>To Get Your Akan Name, Fill The Form</h2>
-                </div>
-                <form class="akan-form">
-                    <label>Date of Birth</label>
-                    <input type="date" name="dateOfBirth" required><br>
-                    <button class="akan-btn btn">Submit</button>
-                </form>
-            </section>
+			<section class="akan show">
+				<div class="akan-content">
+					<div class="akan-heading">
+						<h2>To Get Your Akan Name, Fill The Form</h2>
+					</div>
+					<form class="akan-form">
+						<div class="form-group">
+							<label>Date of Birth</label><br />
+							<input type="date" name="dateOfBirth" />
+						</div>
+						<div class="form-group">
+							<label
+								><input type="radio" name="gender" value="male" />&nbsp;Male </label
+							><br />
+						</div>
+						<div class="form-group">
+							<label
+								><input type="radio" name="gender" value="female" />&nbsp;Female </label
+							><br />
+						</div>
+						<br />
+						<button class="akan-btn btn">Submit</button>
+					</form>
+				</div>
+			</section>
 			<!-- Akan Names Form End -->
 		</main>
 
