add user-feedback section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
 						<button class="akan-btn btn">Submit</button>
 					</form>
 				</div>
+                <div class="akan-overlay hide">
+                    <div class="overlay-content">
+                        <div class="overlay-text">
+                            <h2>What a cool Akan name!</h2>
+                            <h3><strong class="name"></strong> name corresponds to people born on <span class="day"></span></h3>
+                        </div>
+
+                    </div>
+                </div>
 			</section>
 			<!-- Akan Names Form End -->
 		</main>
