--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<main>
 			<!-- Homepage Section Start -->
-			<section class="home row hide">
+			<section class="home row show">
 				<div class="home-img">
 					<img src="./src/images/baby.png" alt="Baby images" />
 				</div>
@@ -29,7 +29,7 @@
 			<!-- Homepage Section End -->
 
 			<!-- Akan Names Form Start -->
-			<section class="akan show">
+			<section class="akan hide">
 				<div class="akan-content">
 					<div class="akan-heading">
 						<h2>To Get Your Akan Name, Fill The Form</h2>
@@ -37,31 +37,41 @@
 					<form class="akan-form">
 						<div class="form-group">
 							<label>Date of Birth</label><br />
-							<input type="date" name="dateOfBirth" />
+							<input type="date" name="dateOfBirth" required/>
 						</div>
 						<div class="form-group">
 							<label
-								><input type="radio" name="gender" value="male" />&nbsp;Male </label
+								><input
+									type="radio"
+									name="gender"
+									value="male"
+								/>&nbsp;Male </label
 							><br />
 						</div>
 						<div class="form-group">
 							<label
-								><input type="radio" name="gender" value="female" />&nbsp;Female </label
+								><input
+									type="radio"
+									name="gender"
+									value="female"
+								/>&nbsp;Female </label
 							><br />
 						</div>
 						<br />
 						<button class="akan-btn btn">Submit</button>
 					</form>
 				</div>
-                <div class="akan-overlay hide">
-                    <div class="overlay-content">
-                        <div class="overlay-text">
-                            <h2>What a cool Akan name!</h2>
-                            <h3><strong class="name"></strong> name corresponds to people born on <span class="day"></span></h3>
-                        </div>
-
-                    </div>
-                </div>
+				<div class="akan-overlay hide">
+					<div class="overlay-content">
+						<div class="overlay-text">
+							<h2>What a cool Akan name!</h2>
+							<h3>
+								<strong class="name"></strong> name corresponds to people born
+								on <span class="day"></span>
+							</h3>
+						</div>
+					</div>
+				</div>
 			</section>
 			<!-- Akan Names Form End -->
 		</main>
