--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	</head>
 	<body>
 		<main>
+			<!-- Alert Box Start -->
+			<div class="alert-container">
+				<div class="text-container">
+					<p class="alert-text">Hell</p>
+					<p class="alert-close">x</p>
+				</div>
+			</div>
+			<!-- Alert Box End -->
 			<!-- Homepage Section Start -->
 			<section class="home row show">
 				<div class="home-img">
@@ -37,7 +45,7 @@
 					<form class="akan-form">
 						<div class="form-group">
 							<label>Date of Birth</label><br />
-							<input type="date" name="dateOfBirth" required/>
+							<input type="date" id="date" name="dateOfBirth" required />
 						</div>
 						<div class="form-group">
 							<label
@@ -62,14 +70,13 @@
 					</form>
 				</div>
 				<div class="akan-overlay hide">
-					<div class="overlay-content">
-						<div class="overlay-text">
-							<h2>What a cool Akan name!</h2>
-							<h3>
-								<strong class="name"></strong> name corresponds to people born
-								on <span class="day"></span>
-							</h3>
-						</div>
+					<div class="overlay-content hide"></div>
+					<div class="overlay-text">
+						<h2>What a cool Akan name!</h2>
+						<h3>
+							<strong class="name"></strong> name corresponds to people born on
+							<span class="day"></span>
+						</h3>
 					</div>
 				</div>
 			</section>
