style: akan-form submit and radio buttons -- change color on hover

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 					</p>
 				</div>
 				<div class="home-right">
-					<form>
+          <form>
+            <p class="home-title form-title">Akan Form</p>
 						<div class="form-group">
 							<label
 								>Enter Date of Birth <br />
