fix: alert -- increase height and change text-shadow color

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 		</header>
 		<!-- Navbar End -->
 
+		<!-- Landing Page Start -->
 		<main>
 			<section class="home">
 				<div class="home-left">
@@ -64,13 +65,12 @@
 						><br />
 						<span class="message"
 							>You were born on
-							<span class="day birthday">"Find Out"</span></span
-						>
+							<span class="day birthday">"Find Out"</span></span>
 					</p>
 				</div>
 				<div class="home-right">
-          <form>
-            <p class="home-title form-title">Akan Form</p>
+					<form>
+						<p class="home-title form-title">Akan Form</p>
 						<div class="form-group">
 							<label
 								>Enter Date of Birth <br />
@@ -96,6 +96,7 @@
 				</div>
 			</section>
 		</main>
+		<!-- Landing Page End -->
 
 		<script src="src/js/script.js"></script>
 	</body>
